--- a/kadai_005/kadai_005/kadai_005.html
+++ b/kadai_005/kadai_005/kadai_005.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="私の趣味の簡単な紹介">
-    <title>私の趣味</title>
+    <meta name="description" content="このページは5章の課題です。">
+    <title>5章課題</title>
 </head>
 <body>
     <h1>私の趣味</h1>
