--- a/kadai_005/kadai_005/kadai_005.html
+++ b/kadai_005/kadai_005/kadai_005.html
@@ -11,7 +11,7 @@
     <p>私はゲームと自作PCが好きです。<br>
         初めてのゲーム機はスーパーファミコンで私が小学生の時でした。<br>
         初めての自作PCは１８の時で、写真のPCは私の今の愛機です。</p>
-        <img src="\images\pc.jpg" alt="紫に光るゲーミングPC">
+        <img src="/images/pc.jpg" alt="紫に光るゲーミングPC">
         <br>
         <a href="https://twitter.com/samuraijuku">私のプロフィールはこちら</a>
 </body>
